# monkey-hs

./: CHANGELOG.md  LICENSE  README.md  monkey-hs.cabal  stack.yaml
lib/: Evaluator.hs  Lexer.hs  Parser.hs  Token.hs  Utils.hs
lib/Common/: ParserT.hs  Stream.hs
lib/Evaluator/: BuiltIns.hs  Object.hs  Types.hs
lib/Lexer/: Token.hs  Types.hs
lib/Parser/: AST.hs  Types.hs
repl/: Main.hs  Repl.hs
src/: Main.hs  Token.hs
test/: EvaluatorSpec.hs  LexerSpec.hs  Main.hs  ParserSpec.hs  ParserTSpec.hs
