name:                monkey-hs
version:             0.1.0.0
synopsis:            An interpreter for the Monkey programming language written in Haskell
homepage:            https://github.com/noraesae/monkey-hs
license:             BSD3
license-file:        LICENSE
author:              Hyunje Jun
maintainer:          me@noraesae.net
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Lexer
                       Lexer.Token
  build-depends:       base
                     , protolude
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

executable mki
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , protolude
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

test-suite monkey-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       LexerSpec
  build-depends:       base
                     , monkey-hs
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
