name:                monkey-hs
version:             0.1.0.0
synopsis:            An interpreter for the Monkey programming language written in Haskell
homepage:            https://github.com/utatti/monkey-hs
license:             BSD3
license-file:        LICENSE
author:              Hyunjae Jun
maintainer:          noraesae+dev@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Common.ParserT
                       Common.Stream
                       Evaluator
                       Evaluator.BuiltIns
                       Evaluator.Object
                       Evaluator.Types
                       Lexer
                       Lexer.Token
                       Lexer.Types
                       Parser
                       Parser.AST
                       Parser.Types
                       Utils
  build-depends:       base
                     , protolude
                     , text
                     , transformers
                     , containers
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

executable mki
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , protolude
                     , monkey-hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

executable mkrepl
  main-is:             Main.hs
  other-modules:       Repl
  build-depends:       base >=4.9 && <4.10
                     , protolude
                     , text
                     , haskeline
                     , monkey-hs
  hs-source-dirs:      repl
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

test-suite monkey-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       EvaluatorSpec
                       LexerSpec
                       ParserSpec
                       ParserTSpec
  build-depends:       base
                     , protolude
                     , monkey-hs
                     , hspec
                     , raw-strings-qq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude
                       QuasiQuotes
